after completing all pages final commit

--- a/index.html
+++ b/index.html
@@ -124,13 +124,18 @@
     <div class="row">
       <div class="col-md-6">
         <img src="images/about1.png" alt="Text Paragraph" class="img-fluid">
-        <h3>Info about us</h3>
-        <p>Welcome to Vetson, your trusted partner in veterinary care. Established in 2005, we are dedicated to providing innovative and high-quality medicines for pets. Our mission is to enhance the health and well-being of animals through advanced research and development. At Vetson, we believe in the power of science and compassion, working closely with veterinarians worldwide to ensure the best outcomes for pets. Join us in our commitment to making a difference in the lives of animals everywhere.</p>
+        <h3>Information About Us</h3>
+        <p>Welcome to Vetson, your trusted partner in veterinary care. Established in 23 August 2022, we are dedicated to providing innovative and high-quality medicines for pets. Our mission is to enhance the health and well-being of animals through advanced research and development. At Vetson, we believe in the power of science and compassion, working closely with veterinarians worldwide to ensure the best outcomes for pets. Join us in our commitment to making a difference in the lives of animals everywhere.</p>
       </div>
       <div class="col-md-6">
         <img src="images/pr26.jpeg" alt="Company History" class="img-fluid">
         <h3>Company History</h3>
-        <p>Vetson was established in 2005 with a vision to revolutionize veterinary medicine. Starting as a small lab, we dedicated ourselves to creating innovative treatments for common and complex animal health issues. Our first major product, VetRelief, a pain management solution for pets, received widespread acclaim. Over the years, we expanded our portfolio to include a comprehensive range of medicines for various ailments, from infections to chronic conditions. Our cutting-edge research facilities and commitment to quality have positioned Vetson as a leader in the industry. We have formed strong partnerships with veterinarians worldwide, ensuring our products meet the highest standards. Today, Vetson continues to lead the way in veterinary pharmaceuticals, committed to improving the lives of animals everywhere.</p>
+        <p>Vetson Animal Health Care Private Limited is a Private incorporated on 23 August 2022. It is classified as Non-government company and is registered at Registrar of Companies, ROC Patna. Its authorized share capital is Rs. 1,000,000 and its paid up capital is Rs. 100,000. It is inolved in Other wholesale [Includes specialized wholesale not covered in any one of the previous categories and wholesale in a variety of goods without any particular specialization.]
+
+          Vetson Animal Health Care Private Limited's Annual General Meeting (AGM) was last held on N/A and as per records from Ministry of Corporate Affairs (MCA), its balance sheet was last filed on 31 March 2023.
+          
+          Directors of Vetson Animal Health Care Private Limited are Prabhat Kumar and Ashlesha Mishra.
+          </p>
       </div>
     </div>
   </section>
@@ -181,8 +186,8 @@
       <div class="col-md-6">
         <p>Get in touch with us:</p>
         <p>Address:</p>
-        <p> Corporate office - bhagwat nagar adarsh colony behind NRL petrol pump 800026 patna</p>
-        <p> Head office - village. gorain po- balha Pusa samastipur pin 848125 bihar</p>
+        <p> Corporate Office - Bhagwat Nagar Adarsh Colony Behind NRL petrol pump 800026 Patna</p>
+        <p> Head Office - village. gorain po- Balha Pusa Samastipur pin 848125 Bihar</p>
         <p>Phone:  7870278223</p>
         <p>Email: vetsonanimal@gmail.com</p>
       </div>
@@ -191,7 +196,7 @@
 
   <!-- Footer -->
   <footer class="bg-light text-center py-4">
-    <p>&copy; 2024 Veterinary Clinic. All rights reserved.</p>
+    <p>&copy;VETSON Healthcare.</p>
   </footer>
 
 
