--- a/productlist.html
+++ b/productlist.html
@@ -46,7 +46,7 @@
     <div class="row product-list">
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="images/productli/pl1.jpg" class="card-img-top" alt="Drug Products">
+          <img src="images/productli/pl1.jpeg" class="card-img-top" alt="Drug Products">
           <div class="card-body text-center">
             <h5 class="card-title">Drug Products List</h5>
             <a href="https://drive.google.com/drive/folders/1-2dYlv4zV5DCRiIM0RA5oIZt14Gjmnvs" class="btn btn-primary">Click Here</a>
