--- a/division.html
+++ b/division.html
@@ -12,6 +12,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ 
 </head>
 <body>
     
@@ -38,13 +39,8 @@
 
   <div class="container">
     <div class="row">
-        <div class="col-md-2">
-            <div class="social-icons">
-                <a href="https://www.facebook.com/share/BT5foYwmKD8nMtS1/?mibextid=qi2Omg"><img src="https://img.icons8.com/fluent/48/000000/facebook-new.png" alt="Facebook"></a>
-                <!-- <a href="#"><img src="https://img.icons8.com/fluent/48/000000/twitter.png" alt="Twitter"></a> -->
-                <a href="https://www.instagram.com/p/C1vlu6YIZjU/?igsh=ZjFkYzMzMDQzZg%3D%3D"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png" alt="Instagram"></a>
-                <a href="https://www.youtube.com/@VetsonAnimalHealthcarePvt.Ltd."><img src="https://img.icons8.com/fluent/48/000000/youtube-play.png" alt="YouTube"></a>
-            </div>
+       <div class="col-md-2">
+           <!-- old div come here that i removed -->
         </div>
         <div class="col-md-8">
             <div class="landing-page">
@@ -65,6 +61,29 @@
     </div>
 </div>
 
-  
+
+
+    <!-- Footer Section -->
+    <footer class="bg-dark text-white py-4">
+      <div class="container">
+          <div class="row">
+              <div class="col-12 text-center">
+                  <h5 class="mb-3">Follow Us</h5>
+                  <div class="social-icons">
+                      <a href="https://www.facebook.com/share/BT5foYwmKD8nMtS1/?mibextid=qi2Omg" class="social-icon facebook" target="_blank" aria-label="Facebook">
+                          <img src="https://img.icons8.com/fluent/48/ffffff/facebook-new.png" alt="Facebook">
+                      </a>
+                      <a href="https://www.instagram.com/p/C1vlu6YIZjU/?igsh=ZjFkYzMzMDQzZg%3D%3D" class="social-icon instagram" target="_blank" aria-label="Instagram">
+                          <img src="https://img.icons8.com/fluent/48/ffffff/instagram-new.png" alt="Instagram">
+                      </a>
+                      <a href="https://www.youtube.com/@VetsonAnimalHealthcarePvt.Ltd." class="social-icon youtube" target="_blank" aria-label="YouTube">
+                          <img src="https://img.icons8.com/fluent/48/ffffff/youtube-play.png" alt="YouTube">
+                      </a>
+                  </div>
+                  <p class="mt-3 mb-0">© 2024 Your Company. All rights reserved.</p>
+              </div>
+          </div>
+      </div>
+  </footer>
 </body>
 </html>
