--- a/division.html
+++ b/division.html
@@ -68,7 +68,7 @@
       <div class="container">
           <div class="row">
               <div class="col-12 text-center">
-                  <h5 class="mb-3">Follow Us</h5>
+                  <h5 class="mb-3">Vetson Animal Healthcare</h5>
                   <div class="social-icons">
                       <a href="https://www.facebook.com/share/BT5foYwmKD8nMtS1/?mibextid=qi2Omg" class="social-icon facebook" target="_blank" aria-label="Facebook">
                           <img src="https://img.icons8.com/fluent/48/ffffff/facebook-new.png" alt="Facebook">
@@ -80,7 +80,7 @@
                           <img src="https://img.icons8.com/fluent/48/ffffff/youtube-play.png" alt="YouTube">
                       </a>
                   </div>
-                  <p class="mt-3 mb-0">© 2024 Your Company. All rights reserved.</p>
+                  <p class="mt-3 mb-0">© 2024 Vetson Animal Health Care. All rights reserved.</p>
               </div>
           </div>
       </div>
