--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VETSON</title>
+  <meta name="description" content="Vetson Animal Healthcare provides top-notch veterinary services and compassionate care for your pets.">
+  <title>Vetson Animal Healthcare | Comprehensive Veterinary Services</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 
@@ -60,13 +61,13 @@
       <div class="carousel-item active">
         <img src="images/1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Welcome To VETSON</h5>
+          <h5>Welcome To Vetson Animal Healthcare</h5>
         </div>
       </div>
       <div class="carousel-item">
         <img src="images/3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Welcome To VETSON</h5>
+          <h5>Welcome To Vetson Animal Healthcare</h5>
         </div>
       </div>
     </div>
@@ -85,33 +86,33 @@
     <h2>Learn About our Veterinary Medicinal Products</h2>
     <div class="row">
       <div class="col-md-4">
-        <img src="images/pr3.jpeg" alt="Modern Design" class="img-fluid">
+        <img src="images/pr3.jpeg" alt="Veterinary clinic with caring staff and healthy pets" class="img-fluid">
         <h3>Your Pet’s Best Healthcare</h3>
         <p>Offering top-quality veterinary medicinal products, API’s, and nutraceuticals for your pet’s health and wiliness.</p>
       </div>
       <div class="col-md-4">
-        <img src="images/pr4.jpeg" alt="High Quality" class="img-fluid">
+        <img src="images/pr4.jpeg" alt="Vetson Animal Healthcare Veterinary clinic with caring staff and healthy pets" class="img-fluid">
         <h3>Quality Guaranteed</h3>
         <p>Our products are trusted and approved by the market and our customers, ensuring the highest level of quality and satisfaction.</p>
       </div>
       <div class="col-md-4">
-        <img src="images/pr5.jpeg" alt="Quick Support" class="img-fluid">
+        <img src="images/pr5.jpeg" alt="Vetson Animal Healthcare Veterinary clinic with caring staff and healthy pets" class="img-fluid">
         <h3>Comprehensive Care</h3>
         <p>From herbal wound healing ticks and mastitis sprays, we have all your pet’s healthcare needs covered in one place.</p>
       </div>
 
       <div class="col-md-4">
-        <img src="images/pr6.jpeg" alt="Quick Support" class="img-fluid">
+        <img src="images/pr6.jpeg" alt="Vetson Animal Healthcare Veterinary clinic with caring staff and healthy pets" class="img-fluid">
         <h3>MISSION</h3>
         <p>We bring solutions to the market that benefit the well-being and the productivity of our animals</p>
       </div>
       <div class="col-md-4">
-        <img src="images/pr7.jpeg" alt="Quick Support" class="img-fluid">
+        <img src="images/pr7.jpeg" alt="Vetson Animal Healthcare Veterinary clinic with caring staff and healthy pets" class="img-fluid">
         <h3>Values</h3>
         <p>Integrity-Entrepreneurship – Excellence – Reliability</p>
       </div>
       <div class="col-md-4">
-        <img src="images/pr8.jpeg" alt="Quick Support" class="img-fluid">
+        <img src="images/pr8.jpeg" alt="Vetson Animal Healthcare Veterinary clinic with caring staff and healthy pets" class="img-fluid">
         <h3>Vision</h3>
         <p>To be a company of reference within the Animal Health Industry by offering reliable and Innovative solutions.</p>
       </div>
@@ -125,7 +126,7 @@
       <div class="col-md-6">
         <img src="images/about1.png" alt="Text Paragraph" class="img-fluid">
         <h3>Information About Us</h3>
-        <p>Welcome to Vetson, your trusted partner in veterinary care. Established in 23 August 2022, we are dedicated to providing innovative and high-quality medicines for pets. Our mission is to enhance the health and well-being of animals through advanced research and development. At Vetson, we believe in the power of science and compassion, working closely with veterinarians worldwide to ensure the best outcomes for pets. Join us in our commitment to making a difference in the lives of animals everywhere.</p>
+        <p>Welcome to Vetson Animal Healthcare, your trusted partner in veterinary care. Established in 23 August 2022, we are dedicated to providing innovative and high-quality medicines for pets. Our mission is to enhance the health and well-being of animals through advanced research and development. At Vetson, we believe in the power of science and compassion, working closely with veterinarians worldwide to ensure the best outcomes for pets. Join us in our commitment to making a difference in the lives of animals everywhere.</p>
       </div>
       <div class="col-md-6">
         <img src="images/pr26.jpeg" alt="Company History" class="img-fluid">
@@ -184,10 +185,10 @@
         </form>
       </div>
       <div class="col-md-6">
-        <p>Get in touch with us:</p>
+        <p>Get in Touch With Us:</p>
         <p>Address:</p>
         <p> Corporate Office - Bhagwat Nagar Adarsh Colony Behind NRL petrol pump 800026 Patna</p>
-        <p> Head Office - village. gorain po- Balha Pusa Samastipur pin 848125 Bihar</p>
+        <p> Head Office - Village Gorain PO- Balha Pusa Samastipur pincode: 848125 Bihar</p>
         <p>Phone:  7870278223</p>
         <p>Email: vetsonanimal@gmail.com</p>
       </div>
@@ -196,7 +197,7 @@
 
   <!-- Footer -->
   <footer class="bg-light text-center py-4">
-    <p>&copy;VETSON Healthcare.</p>
+    <p>&copy;2024 Vetson Animal Healthcare.All rights reserved.</p>
   </footer>
 
 
