--- a/division.html
+++ b/division.html
@@ -73,7 +73,7 @@
                       <a href="https://www.facebook.com/share/BT5foYwmKD8nMtS1/?mibextid=qi2Omg" class="social-icon facebook" target="_blank" aria-label="Facebook">
                           <img src="https://img.icons8.com/fluent/48/ffffff/facebook-new.png" alt="Facebook">
                       </a>
-                      <a href="https://www.instagram.com/p/C1vlu6YIZjU/?igsh=ZjFkYzMzMDQzZg%3D%3D" class="social-icon instagram" target="_blank" aria-label="Instagram">
+                      <a href="https://www.instagram.com/vetson78?igsh=cXlveHFoZDY5emxu" class="social-icon instagram" target="_blank" aria-label="Instagram">
                           <img src="https://img.icons8.com/fluent/48/ffffff/instagram-new.png" alt="Instagram">
                       </a>
                       <a href="https://www.youtube.com/@VetsonAnimalHealthcarePvt.Ltd." class="social-icon youtube" target="_blank" aria-label="YouTube">
