--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shotcut icon" type="vetson-icon" href="./images/logo.jpeg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Vetson Animal Healthcare provides top-notch veterinary services and compassionate care for your pets.">
   <title>Vetson Animal Healthcare | Comprehensive Veterinary Services</title>
